# coursework

./: .gitmodules  README.md
CSU11010-IntroToProgramming/BMI-Calculator/src/: BMI_Calculator.java  BMI_Calculator_GUI.java
CSU11010-IntroToProgramming/Connect4/src/: C4RandomAIPlayer.java  Connect4Game.java  Connect4Grid.java  Connect4Player.java
CSU11010-IntroToProgramming/HiLo-Game/: README.md
CSU11010-IntroToProgramming/Incremental-Statistics/: README.md
CSU11010-IntroToProgramming/MaxMin-Finder/: README.md
CSU11013-ProgrammingProject/Project_Aliens/: WaveAlien.pde
CSU11013-ProgrammingProject/Project_InvaderBombers/: AudioEngine.pde  Bomb.pde  Bullet.pde  Player.pde  ShieldBlock.pde
CSU11013-ProgrammingProject/Project_Invaders/: Bullet.pde  NormalAlien.pde  Powerup.pde
CSU11013-ProgrammingProject/Project_MovingSquare/: Project_MovingSquare.pde
CSU11013-ProgrammingProject/Project_Pong/: Ball.pde  HumanPaddle.pde  Project_Pong.pde
CSU11013-ProgrammingProject/Project_PubSubEventPattern/: Project_PubSubEventPattern.pde
CSU11013-ProgrammingProject/Project_Widgets/: Actions.pde  Checkbox.pde  Project_Widgets.pde  RadioButtonSet.pde
CSU11013-ProgrammingProject/Project_WrappingSquare/: Project_WrappingSquare.pde
CSU11013-ProgrammingProject/Project_WrappingSquares/: Project_WrappingSquares.pde
CSU11013-ProgrammingProject/Project_WrappingSquares_Sinusoidal/: Project_WrappingSquares_Sinusoidal.pde
CSU11021-IntroToComputing1/: Lab-1-2-FirstProgram.s  Lab-1-3-BasicAssembly.s  Lab-1-5-AsciiValue.s  Lab-2-1-FlowControl.s  Lab-2-3-GCD.s  Lab-3-2-StrCpy.s  Lab-3-3-StrRev.s  Lab-3-6-Intersection.s  Lab-4-1-BitManipulation.s  Lab-4-2-Shift64.s  Lab-4-3-Random.s
CSU11022-IntroToComputing2/: Final-A-MagicSquare.s  Final-B-ChessClock.s  Lab-1-2-BubbleSort.s  Lab-2-1-UT.s  Lab-3a-FPAdd.s  Lab-4a-Game.s
CSU11026-DigitalLogicDesign/: FiniteStateMachine.v  OddFunction.v  SerialComplementer.v  adder_sub.v  bcd_adder.v  comparator.v
Year1/CSU11021-IntroToComputing1/: Lab-1-1-Demo.s  Lab-1-4-AsciiAdd.s  Lab-2-2-Division.s  Lab-2-4-Console.s  Lab-2-5-AsciiValue.s  Lab-3-1-Flags.s  Lab-3-4-ProperCase.s  Lab-3-5-Mode.s  Lab-4-4-Anagram.s
Year1/CSU11022-IntroToComputing2/: Lab-1-1-ArrayMove.s  Lab-2-2-MatMul.s  Lab-2-3-Subarray.s  Lab-3b-FPAdd.s  Lab-4b-Game.s
Year1/CSU11026-DigitalLogicDesign/: StateDiagram.v  circuit_1.v  circuit_2.v
Year4/CSU44012-FunctionalProgramming/Ass05/: Ass05.cabal
Year4/CSU44012-FunctionalProgramming/Ass05/src/: Main.hs  Render.hs  Shapes.hs
Year4/CSU44012-FunctionalProgramming/Proj1/: ImageServer.cabal
Year4/CSU44012-FunctionalProgramming/Proj1/src/: Drawing.hs  Main.hs
Year4/CSU44053-ComputerVision/Assignment1/: .gitignore  CMakeLists.txt  compile_flags.txt
Year4/CSU44053-ComputerVision/Assignment1/src/: Common.cpp  Common.hpp  MyApplication.cpp  MyApplication.hpp  Part1.cpp  Part1.hpp  Part2.cpp  Part2.hpp  Part3.cpp  Part3.hpp  Part4.cpp  Part4.hpp  Part5.cpp  Part5.hpp  main.cpp
Year5/CS7NS2-InternetOfThings/: essay.tex  refs.bib
Year5/CS7NS4-UrbanComputing/project/: .gitignore  Cargo.toml  README.txt  build.rs
Year5/CS7NS4-UrbanComputing/project/src/: client.rs  main.rs  server.rs  state.rs
Year5/CS7NS4-UrbanComputing/project/src/client/: gtfs.rs  gtfsr.rs
Year5/CS7NS4-UrbanComputing/project/src/server/: handlers.rs  users.rs
Year5/CS7NS4-UrbanComputing/project/web/: template.html
Year5/CS7NS4-UrbanComputing/project/web/templates/: route.html  search.html  trip.html
(+633 files in other folders)
