cabal-version: 1.12

name:           Ass05
version:        0.1.0.0
build-type:     Simple

executable Ass05-exe
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Render, Shapes
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base >= 4.7 && < 5, JuicyPixels
  default-language: Haskell2010
