cabal-version: 1.12

name:           ImageServer
version:        0.1.0.0
build-type:     Simple

executable ImageServer-exe
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Drawing
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base >= 4.7 && < 5, primitive, JuicyPixels, scotty, blaze-html, base64, text, bytestring
  default-language: Haskell2010
