[package]
name = "unbustle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
prost = "0.12.1"
tls-listener = { version = "0.8.0", features = ["hyper"] }
openssl_impl = { package = "openssl", version = "0.10.32" }
tokio = { version = "1.33.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca" }
bytes = "1.5"
http = "0.2.9"
zip = "0.6.6"
csv = "1.3.0"

[build-dependencies]
prost-build = "0.12.1"

