[package]
name = "unbustle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-server = { version = "0.3", features = ["tls-rustls"] }
tokio = { version = "1.33.0", features = ["full"] }
reqwest = "0.11"
prost = "0.12.1"
zip = "0.6.6"
csv = "1.3.0"
chrono = { version = "^0", features = ["serde"] }
handlebars = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"

[build-dependencies]
prost-build = "0.12.1"

